--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-allauth==0.52.0
 django-crispy-forms==1.13.0
 idna==3.4
 oauthlib==3.2.2
+Pillow==8.4.0
 psycopg2-binary==2.9.5
 pycparser==2.21
 PyJWT==2.4.0
