--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,6 @@ pytz==2022.7.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
+stripe==5.2.0
 typing_extensions==4.1.1
 urllib3==1.26.14
