--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 Django==3.2.18
 django-allauth==0.52.0
 django-crispy-forms==1.13.0
+django-debug-toolbar==3.2.4
 idna==3.4
 oauthlib==3.2.2
 Pillow==8.4.0
