--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     container_name: book_store
     image: book_store:book_store
     environment:
+      - ENVIRONMENT=development
       - SECRET_KEY=django-insecure-gv78xsl=x-&_1o5v)@q7zk7mn!=^)uiw*z6)vrf53x+8&ww9kg
       - DEBUG=1
       - STRIPE_TEST_PUBLISHABLE_KEY=pk_test_51KY7S3GhKXwGfLPzDVXf0saoU8oMKqKyADemUi5pxxMwNOrHSP2AcVq83thrC1KfWc0jzsP3cuBT7Ly9Sgbnfk4G00YSFnUopA
@@ -24,6 +25,6 @@ services:
       - .:/book_store
     depends_on:
       - db
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn book_store.wsgi -b 0.0.0.0:8000
 volumes:
       postgres_data:
