--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ cffi==1.15.1
 charset-normalizer==2.0.12
 cryptography==39.0.1
 defusedxml==0.7.1
+dj-database-url==1.2.0
 Django==3.2.18
 django-allauth==0.52.0
 django-crispy-forms==1.13.0
 django-debug-toolbar==3.2.4
+gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.2
 Pillow==8.4.0
@@ -22,3 +24,4 @@ sqlparse==0.4.3
 stripe==5.2.0
 typing_extensions==4.1.1
 urllib3==1.26.14
+whitenoise==5.3.0
